# stars-testing-intro

./: .gitignore  .lintr  .nojekyll  .pylintrc  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.html  CONTRIBUTING.md  DESCRIPTION  Dockerfile  README.md  _quarto.yml  environment.yaml  index.html  index.qmd  lint.sh  requirements-test.txt  requirements.txt  robots.txt  search.json  sitemap.xml  stars-testing-intro.Rproj  styles.css  styles.scss
assets/: language-selector.css  language-selector.html  language-selector.js  styles.css  styles.scss
examples/python/: README.md  pyproject.toml
examples/python/data/: patient_data.csv
examples/python/src/waitingtimes/: __init__.py  patient_analysis.py
examples/python/tests/: test_back.py  test_functional.py  test_intro_parametrised.py  test_intro_simple.py  test_unit.py
pages/: back_tests.html  back_tests.qmd  break.html  break.qmd  case_study.html  case_study.qmd  defensive_programming.html  defensive_programming.qmd  example_repositories.html  example_repositories.qmd  functional_tests.html  functional_tests.qmd  github_actions.html  github_actions.qmd  introduction.html  parametrising_tests.html  parametrising_tests.qmd  regression_tests.html  regression_tests.qmd  run_tests.html  run_tests.qmd  smoke_tests.html  smoke_tests.qmd  system_tests.html  system_tests.qmd  temp_mock.html  temp_mock.qmd  test_coverage.html  test_coverage.qmd  unit_tests.html  unit_tests.qmd  why_test.html  why_test.qmd  write_basic_test.html  write_basic_test.qmd
tools/: extract_rsnippets.py  extract_snippets.py
(+111 files in other folders)
